--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "scripts": {
     "start": "node --watch index.js",
+    "dev": "node index.js",
     "docker:psql": "docker-compose up -d postgres && docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' $(docker-compose ps -q postgres)",
     "docker:pga": "docker-compose up -d pgadmin",
-    "dev": "node index.js",
     "lint": "eslint",
     "lint:format": "standard --fix",
+    "test": "npx jest --detectOpenHandles --verbose",
     "migrations:generate": "sequelize-cli migration:generate --name",
     "migrations:run": "sequelize-cli db:migrate",
     "migrations:revert": "sequelize-cli db:migrate:undo",
@@ -18,7 +19,7 @@
     "seeders:run": "sequelize-cli db:seed:all"
   },
   "keywords": [],
-  "author": "",
+  "author": "kenny luque",
   "license": "ISC",
   "dependencies": {
     "@hapi/boom": "^10.0.1",
@@ -39,6 +40,11 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
-    "sequelize-cli": "^6.6.0"
+    "jest": "^29.5.0",
+    "sequelize-cli": "^6.6.0",
+    "supertest": "^6.3.3"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
