--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "sequelize": "^6.31.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.1",
     "eslint": "^8.0.1",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "jest": "^29.5.0",
+    "passport-jwt": "^4.0.1",
     "sequelize-cli": "^6.6.0",
     "supertest": "^6.3.3"
   },
