--- a/.gitignore
+++ b/.gitignore
@@ -216,5 +216,6 @@ $RECYCLE.BIN/
 *.lnk
 
 node_modules
-
+mysql_data
+postgres_data
 # End of https://www.toptal.com/developers/gitignore/api/node,macos,windows,linux
