--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "nodemon index.js",
     "dev": "node index.js",
     "docker:psql": "docker-compose up -d postgres && docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' $(docker-compose ps -q postgres)",
+    "docker:mysql": "docker-compose up -d mysql && docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' $(docker-compose ps -q mysql)",
     "docker:pga": "docker-compose up -d pgadmin",
+    "docker:php": "docker-compose up -d phpmyadmin",
     "docker:down": "docker-compose down",
     "lint": "eslint",
     "lint:format": "standard --fix",
@@ -29,6 +31,7 @@
     "express": "^4.18.2",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
+    "mysql2": "^3.3.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "pg": "^8.10.0",
